--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# gitignore template for esp-idf, the official development framework for ESP32
+# https://github.com/espressif/esp-idf
+
+build/
+sdkconfig
+sdkconfig.old
+
 # Prerequisites
 *.d
 
