Tested code to move forwards and back in all files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
     "files.associations": {
         "*.ipp": "c",
         "dirent.h": "c",
-        "esp_vfs_fat.h": "c"
+        "esp_vfs_fat.h": "c",
+        "typeinfo": "c"
     }
 }
